changes to NavBar.css to fix responsive sizing using clam and a row break in Navbar.jsx. Fix Nest Hub layout for home component

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -197,7 +197,6 @@ body {
         var(--color-crt-effect-b)
       );
     background-size: 100% 2px, 3px 100%;
-    pointer-events: none;
     opacity: 0.7;
     z-index: 0;
   }
@@ -366,9 +365,13 @@ body {
   }
 
   .home-content img {
-    height: 90%;
+    height: 100%;
     width: auto;
     padding: 0 2%;
+  }
+
+  .icons-cont::before {
+    background: transparent;
   }
 
   .icons-cont {
@@ -385,5 +388,34 @@ body {
 
   .Icon {
     padding: 3% 5%;
+  }
+}
+
+/* NEST HUB SIZING */
+@media screen and (max-width: 1024px) and (max-height: 600px) {
+  .home-content {
+    background-size: 350%;
+    background-position: center;
+  }
+
+  .grid-overlay {
+    padding: 4vh 0 0 0;
+    background-size: 16.5px 16.5px;
+  }
+
+  .icons-cont {
+    padding: 15px 0;
+    border-bottom: solid black 2px;
+    border-top: solid black 2px;
+    position: relative;
+    overflow: visible;
+    height: auto;
+    background-color: transparent;
+    border: none;
+  }
+
+  .Icon {
+    width: 80%;
+    padding: 2%;
   }
 }
